# hiview

./: Cargo.toml  LICENSE
.github/workflows/: ci.yml
src/: app_state.rs  handler.rs  key_selector.rs  lib.rs  main.rs  traits.rs  ui.rs
src/app/: mod.rs  navigation.rs  state.rs
src/widgets/: key_selector.rs  main.rs  mod.rs  value_inspector.rs  value_selector.rs
